hphp/hack/test/typecheck/construct/tparam_rebind.php.exp
File "tparam_rebind.php", line 4, characters 26-26:
You cannot re-bind the type parameter T (Naming[2041])
  File "tparam_rebind.php", line 3, characters 9-9:
  T is already bound here
File "tparam_rebind.php", line 4, characters 19-24:
Was expecting a return type hint (Typing[4030])
