hphp/hack/test/typecheck/construct/tparam_rebind.php
<?hh // strict

class C<T> {
  public function __construct<T>() {}
}
